# corvus-ids

./: .gitignore  README.md  docker-compose.yml
capture/: CMakeLists.txt  Dockerfile  start.sh
capture/asm/: features_avx2.asm
capture/src/: flow_features.c  flow_features.h  flow_table.c  flow_table.h  flow_types.h  ipc_writer.c  ipc_writer.h  main.c  packet_parser.c  packet_parser.h
inference/: _array_tree.pyx  classifier.py  config.py  online_detector.py  requirements-base.txt  requirements.txt  socket_reader.py  storage.py
